upload new updates

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <!-- Bootstrap CSS Link -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+<!-- Bootstrap Theme CSS Link -->
+<link rel="stylesheet" type="text/css" href="assets/css/theme.css">
+
 <!-- Personalized CSS Link -->
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -60,7 +63,7 @@
         
 <div class="form-group">
 
-<input type="text" class="form-control" placeholder="Search Artist, Genre, Song">
+<input type="text" class="form-control" placeholder="Artist, Genre, Song">
 
 </div>
 
