upload new updates

--- a/index.html
+++ b/index.html
@@ -189,32 +189,22 @@
 <!-- Begin Jumbotron 5000 -->
 <div class="jumbotron">
 
-<h1>Video / Information Here</h1>
-
-<p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/8SeRU_ZPDkE" frameborder="0" allowfullscreen></iframe></center>
 </div>
 
 <div class="row">
 
 <div class="col-6 col-lg-8">
 
-<h2>Video Here</h2>
-
-<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8SeRU_ZPDkE" frameborder="0" allowfullscreen></iframe>
 
 </div><!--/span-->
 
 <div class="col-6 col-lg-4">
 
-<h2>Bio Here</h2>
-
-<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
+<div id="map" style="width:315px; height:315px">My map will go here</div>
+<!-- Javascript -->
+<script src='assets/javascript/googlemaps.js'></script>
 </div><!--/span-->
 
 <div class="col-6 col-lg-8">
@@ -301,6 +291,9 @@
 
 <!-- Bootstrap JavaScript CDN -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!-- Google Maps API -->
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuLlYRZMv5nnlPQqKpyua8XfZ_yk3O9eE&callback=initMap"></script>
 
 </body>
 
