linking jQuery with html

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         
 <div class="form-group">
 
-<input type="text" class="form-control" placeholder="Artist, Genre, Song">
+<input type="text" id= "user-input" class="form-control" placeholder="Artist, Genre, Song">
 
 </div>
 
-<button type="submit" class="btn btn-default">Submit</button>
+<button type="submit" id = "get-results" class="btn btn-default">Submit</button>
 
 </form>
       
@@ -187,7 +187,7 @@
 <div class="col-12 col-md-9">
 
 <!-- Begin Jumbotron 5000 -->
-<div class="jumbotron">
+<div class="jumbotron near-you">
 
 <h1>Video / Information Here</h1>
 
@@ -301,6 +301,9 @@
 
 <!-- Bootstrap JavaScript CDN -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<!-- Our very own javascript file -->
+<script src= "assets/javascript/game.js"></script>
 
 </body>
 
