--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@
 <!-- Bootstrap JavaScript CDN -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+<!-- Moment.js CDN -->
+<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
 <!-- Our very own javascript file -->
 <script src= "assets/javascript/game.js"></script>
 
