similar loading into jumbotron

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <div class="col-12 col-md-9">
 
 <!-- Begin Jumbotron 5000 -->
-<div class="jumbotron near-you">
+<div class="jumbotron" id= "near-you">
 
 <h1>Video / Information Here</h1>
 
