a little work on google map

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <div class="col-12 col-md-9">
 
 <!-- Begin Jumbotron 5000 -->
-<div class="jumbotron" id= "near-you">
+<div class="jumbotron" >
 
 <h1>Video / Information Here</h1>
 
@@ -217,7 +217,7 @@
 
 </div><!--/span-->
 
-<div class="col-6 col-lg-8">
+<div class="col-6 col-lg-8" id= "near-you">
 
 <h2>Similar Artist</h2>
 
@@ -228,7 +228,7 @@
 </div><!--/span-->
 
 <div class="col-6 col-lg-4">
-
+<div id="map"></div>
 <h2>S.A. Info</h2>
 
 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -305,8 +305,12 @@
 <!-- Moment.js CDN -->
 <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
+
 <!-- Our very own javascript file -->
 <script src= "assets/javascript/game.js"></script>
+
+<!-- Google MAP API -->
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuLlYRZMv5nnlPQqKpyua8XfZ_yk3O9eE&callback=initMap"></script>
 
 </body>
 
