--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
 <!-- Bootstrap CSS Link -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<!-- Bootstrap Theme CSS Link -->
+<!-- Bootstrap Theme CSS Link (there are some errors that pop up due to this file) -->
 <link rel="stylesheet" type="text/css" href="assets/css/theme.css">
 
-<!-- Personalized CSS Link -->
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<!-- Personalized CSS Link 
+<link rel="stylesheet" type="text/css" href="assets/css/style.css" -->
 
 <!-- Google Font Link -->
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+<!-- SASS CSS Link -->
+<link rel="stylesheet" type="text/css" href="assets/css/testm.scss">
 
 <!-- Sass Style Sheet -->
 <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
