--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <div class="form-group">
 
                     <input type="text" id="user-input" class="form-control" placeholder="Artist, Genre, Song">
+                    <div id="validate"></div>
 
                 </div>
 
@@ -86,37 +87,9 @@
 
             </form>
 
-            <p id="validate"></p>
-
-            <div id="navbar" class="collapse navbar-collapse">
-
-                <ul class="nav navbar-nav">
-
-                    <li class="active"><a href="index.html">Home</a></li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown02">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-
-                </ul>
-
-            </div>
             <!-- Nav Collapse -->
-
         </div>
-
+        </div>
     </nav>
 
     <!-- Begin Carousel -->
@@ -164,61 +137,6 @@
 
             </div>
 
-            </ul>
-
-        </div>
-        <!-- Nav Collapse -->
-
-    </div>
-
-    </nav>
-
-    <!-- Begin Carousel -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-
-        <!-- Indicate this awesome carousel -->
-        <!-- Dynamically add carousel items  -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <div class="carousel-inner" role="listbox">
-
-            <div class="item active">
-
-                <div class="container">
-
-                    <div class="carousel-caption">
-                        <!-- adding pictures user searches for           -->
-                        <a href="" target="_blank">
-                            <img src="" alt="" height="200" width="200"></a>
-
-                        <h1><i class="" aria-hidden="true"></i></span>
-                        </h1>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="item">
-
-                <div class="container">
-
-                    <div class="carousel-caption">
-
-                        <a href="" target="_blank">
-                            <img src="" alt="" height="200" width="300"></a>
-
-                    </div>
-
-                </div>
-
-            </div>
-
             <div class="item">
 
                 <div class="container">
@@ -227,7 +145,7 @@
 
                         <a href="" target="_blank">
 
-                            <img src="assets/css/fillmore.jpg" alt="" height="200" width="300"></a>
+                            <img src="assets/css/visulite.jpg" alt="" height="200" width="300"></a>
 
                     </div>
 
@@ -235,294 +153,143 @@
 
             </div>
 
+
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+
+
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+
+            </a>
+
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+
+            </a>
         </div>
-
-        <a class="left carousel-control" href="" role="button" data-slide="prev">
-
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-
-        </a>
-
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-
-        </a>
-
-    </div>
-    <!-- End Carousel -->
-
-    <div class="item">
-
-        <div class="container">
-
-            <div class="carousel-caption">
-
-                <a href="" target="_blank">
-
-                    <img src="assets/css/visulite.jpg" alt="" height="200" width="300"></a>
-
-            </div>
-
-        </div>
-
-    </div>
-
-    </div>
-
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-
-        <!-- Begin Jumbotron 5000 -->
-        <div class="jumbotron">
-            <!-- artist bio and picture -->
-            <div id="artist-bio"></div>
-            <!-- youtube iframe -->
-            <center><iframe id="yourIframe" width="560" height="315" src="https://www.youtube.com/embed/8SeRU_ZPDkE" frameborder="0" allowfullscreen></iframe></center>
-        </div>
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-
-    </a>
-
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-
-        <<<<<<< HEAD <div id="tour-location">
-            </div>
-            <h2>Video Here</h2>
-
-
-
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
-            =======
-    </a>
-    >>>>>>> kevinB
-
     </div>
     <!-- End Carousel -->
 
     <!-- Begin Container -->
     <div class="container">
 
-        <div id="lyrics">
-            <a id="lLink" href="" target="_blank">Look At The Lyrics!</a>
-            <div>
+        <div class="col-12 col-md-9">
 
-
-                <h2>Bio Here</h2>
-
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
-                <div id="map" style="width:315px; height:315px">My map will go here</div>
-
+            <!-- Begin Jumbotron 5000 -->
+            <div class="jumbotron">
+                <img id="concert" width="100%" height="100%" src="assets/css/concert.jpg">
+                <!-- holds youtube video -->
+                <center><iframe id="yourIframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
+                    <!-- holds lyrics link -->
+                    <div id="lyrics">
+                        <a id="lLink" href="" target="_blank">Look At The Lyrics!</a>
+                    </div>
+                    <div id="artist-bio"></div>
+                </center>
             </div>
-            <!--/span-->
 
-            <div class="col-12 col-md-9">
+            <div class="row">
 
-                <!-- Begin Jumbotron 5000 -->
-                <div class="jumbotron">
-                    <img id="concert" width="100%" height="100%" src="assets/css/concert.jpg">
-                    <!-- holds youtube video -->
-                    <center><iframe id="yourIframe" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
-                        <!-- holds lyrics link -->
-                        <div id="lyrics">
-                            <a id="lLink" href="" target="_blank">Look At The Lyrics!</a>
-                            <div>
-                                <div id="artist-bio"></div>
+                <div class="col-6 col-lg-6">
+
+                    <h2>Similar Artists Playing Here</h2>
+                    <div id="near-you"></div>
+                </div>
+
+
+                <div class="col-6 col-lg-6">
+
+                    <div id="map" style="width:100%; height:315px">My map will go here</div>
+                    <center><a href="http://www.uber.com/ride" target="_blank">Get A Ride!<br><img src= "assets/css/uber.jpg"></a>
                     </center>
-                    </div>
+                </div>
 
-                    <div class="row">
-
-                        <div class="col-6 col-lg-8">
-
-                            <h2>Similar Artists Playing Here</h2>
-                            <div id="near-you"></div>
-                        </div>
-                        <!--/span-->
-
-                        <div class="col-6 col-lg-4">
-                            <div id="map"></div>
-
-                            <div id="map" style="width:100%; height:315px">My map will go here</div>
-
-                        </div>
-                        <!--/span-->
-
-                        <div class="col-6 col-lg-8">
-
-                            <h2>Similar Artists</h2>
-                            <div id="similar"></div>
-                            <!-- <a href="" target="_blank" id="simArt-link"> -->
-                            <div id="simDiv"></div>
-                            </a>
-                            <!-- <h3 id="simName"></h3>-->
+                <div class="col-6 col-lg-6">
 
 
-                            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
-                        </div>
-                        <!--/span-->
-
-                        <div class="col-6 col-lg-4">
-
-                            <h2>S.A. Info</h2>
-
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
-                                dui. </p>
-
-                            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
-                        </div>
-                        <!--/span-->
-
-                        <div class="col-6 col-lg-8">
-
-                            <h2>Similar Artist</h2>
-
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
-                                dui. </p>
-
-                            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
-                        </div>
-                        <!--/span-->
-
-                        <div class="col-6 col-lg-4">
-
-                            <h2>S.A Info</h2>
-
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
-                                dui. </p>
-
-                            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
-                        </div>
-                        <!--/span-->
-
-                    </div>
-                    <!--/row-->
-
-                    </div>
-                    <!--/span-->
-
-                    <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-
-                        <div class="col-6 col-lg-8">
-
-                            <h2>Upcoming Shows:</h2>
-
-                            <div id="tour-location"></div>
-
-                            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-
-                        </div>
-                        <!--span-->
-
-                        <div class="col-6 col-lg-4">
-
-                        </div>
-                        <!--span-->
-
-                    </div>
-                    <!--row-->
-
-                    <hr>
 
                 </div>
-                <!--.container-->
+
+
+                <div class="col-6 col-lg-6">
+
+                    <h2>Top Artists</h2>
+
+                    <div id="top-ten"></div>
+
+
+                </div>
 
             </div>
+            <!--/row-->
 
-            <!-- Begin Footer -->
-            <footer class="footer">
+        </div>
+        <!--/span-->
 
-                <div class="container">
+        <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
 
-                    <button><a href="http://www.uber.com/ride" target="_blank">UBER</button>
+            <div class="col-6 col-lg-8">
 
-                    <p class="text-muted">&copy; Copyright 2017 HMH</p>
+                <h2>Upcoming Shows:</h2>
 
-                </div>
-
-            </footer>
-
-            <!-- jQuery CDN -->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-            <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
-            <!-- Bootstrap JavaScript CDN -->
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-            <!-- javascript file -->
-            <script src='assets/javascript/game.js'></script>
-
-            <!-- Google Maps API -->
-            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuLlYRZMv5nnlPQqKpyua8XfZ_yk3O9eE&callback=initMap"></script>
-
-            <!-- Google Analytics -->
-            <script>
-                (function(i, s, o, g, r, a, m) {
-                    i['GoogleAnalyticsObject'] = r;
-                    i[r] = i[r] || function() {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-                    a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                    a.async = 1;
-                    a.src = g;
-                    m.parentNode.insertBefore(a, m)
-                })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-                ga('create', 'UA-103035079-1', 'auto');
-                ga('send', 'pageview');
-            </script>
-
-</body>
-
-</html>-->
-
-</div>
-
-<!-- Begin Footer -->
-<footer class="footer">
-
-    <div class="container">
+                <div id="tour-location"></div>
 
 
-        <p class="text-muted">&copy; Copyright 2017 HMH</p>
+            </div>
+            <div class="col-6 col-lg-8">
+
+                <h2>Similar Artists</h2>
+                <div id="simDiv"></div>
+            </div>
+            <!--span-->
+
+
+            <!--span-->
+
+        </div>
+        <!--row-->
+
+        <hr>
+
+    </div>
+    <!--.container-->
 
     </div>
 
-</footer>
+    <!-- Begin Footer -->
+    <footer class="footer">
 
-<!-- jQuery CDN -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <div class="container text-center">
 
-<!-- Firebase CDN -->
-<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+            <center>
+                <a href="http://www.last.fm" target="_blank"><img src="assets/css/last.png">
+            </center>
 
-<!-- Moment.js CDN -->
-<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+            <p class="text-muted">&copy; Copyright 2017 HMH</p>
 
-<!-- Our very own javascript file -->
-<script src="assets/javascript/game.js"></script>
+        </div>
 
-<!-- Bootstrap JavaScript CDN -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </footer>
 
-<!-- Google MAP API -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuLlYRZMv5nnlPQqKpyua8XfZ_yk3O9eE&callback=initMap"></script>
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- Firebase CDN -->
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+
+    <!-- Moment.js CDN -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
+    <!-- Our very own javascript file -->
+    <script src="assets/javascript/game.js"></script>
+
+    <!-- Bootstrap JavaScript CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- Google MAP API -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuLlYRZMv5nnlPQqKpyua8XfZ_yk3O9eE&callback=initMap"></script>
 
 </body>
 
