validation if user enters nothing

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       
 </button>
 
-                <a class="navbar-brand" href="#">Hear Music Here</a>
+                <a class="navbar-brand" href="index.html">Hear Music Here</a>
 
             </div>
 
@@ -79,14 +79,14 @@
                 <div class="form-group">
 
                     <input type="text" id="user-input" class="form-control" placeholder="Artist, Genre, Song">
-                    <div id="validate"></div>
+
 
                 </div>
 
                 <button type="submit" id="get-results" class="btn btn-default">Submit</button>
 
             </form>
-
+            <div id="validate"></div>
             <!-- Nav Collapse -->
         </div>
         </div>
