additional changes to carousel

--- a/index.html
+++ b/index.html
@@ -110,26 +110,12 @@
 
                     <div class="carousel-caption">
 
-                        <a href="" target="_blank">
-                            <img id="artist1" src="assets/css/Fillmore.jpg" alt="" height="200" width="300"></a>
+                        <a href="http://www.fillmorecharlottenc.com/" target="_blank">
+                            <img id="artist1" src="assets/css/Fillmore.jpg" alt="" height="200" width="300">
 
-                        <h1><i class="" aria-hidden="true"></i></span>
-                        </h1>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="item">
-
-                <div class="container">
-
-                    <div class="carousel-caption">
-
-                        <a href="" target="_blank">
-                            <img id="artist2" src="assets/css/PNC.jpg" alt="" height="200" width="300"></a>
+                            <h1><i class="" aria-hidden="true">The Fillmore</i>
+                            </h1>
+                        </a>
 
                     </div>
 
@@ -143,9 +129,30 @@
 
                     <div class="carousel-caption">
 
-                        <a href="" target="_blank">
+                        <a href="http://www.pncmusicpav.com/" target="_blank">
+                            <img id="artist2" src="assets/css/PNC.jpg" alt="" height="200" width="300">
+                            <h1><i class="" aria-hidden="true">PNC Music Pavilion</i>
+                            </h1>
+                        </a>
 
-                            <img src="assets/css/visulite.jpg" alt="" height="200" width="300"></a>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="item">
+
+                <div class="container">
+
+                    <div class="carousel-caption">
+
+                        <a href="http://www.visulite.com/" target="_blank">
+
+                            <img src="assets/css/visulite.jpg" alt="" height="200" width="300">
+                            <h1><i class="" aria-hidden="true">Visulite</i>
+                            </h1>
+                        </a>
 
                     </div>
 
@@ -204,12 +211,6 @@
                     <div id="map" style="width:100%; height:315px">My map will go here</div>
                     <center><a href="http://www.uber.com/ride" target="_blank">Get A Ride!<br><img src= "assets/css/uber.jpg"></a>
                     </center>
-                </div>
-
-                <div class="col-6 col-lg-6">
-
-
-
                 </div>
 
 
