added firebase functionality

--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
                     <center><a href="http://www.uber.com/ride" target="_blank">Get A Ride!<br><img src= "assets/css/uber.jpg"></a>
                     </center>
                 </div>
+            </div>
+            <div class="row">
 
                 <div class="col-6 col-lg-12">
 
@@ -207,9 +209,16 @@
 
                 </div>
 
-            </div>
-            <!--/row-->
+                <div class="col-6 col-lg-12">
 
+                    <h2><strong>Your Searches</strong></h2>
+
+                    <div class="user-search"></div>
+
+
+                </div>
+
+            </div>
         </div>
         <!--/span-->
 
@@ -270,6 +279,8 @@
 
     <!-- Google MAP API -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuLlYRZMv5nnlPQqKpyua8XfZ_yk3O9eE&callback=initMap"></script>
+    <!-- Firebase link -->
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 
 </body>
 
