--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 <div class="form-group">
 
-                    <input type="text" id="user-input" class="form-control" placeholder="Artist, Genre, Song">
+                    <input type="text" id="user-input" class="form-control" placeholder="Search Artist Here">
 
 
                 </div>
