--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
     <!-- Our very own javascript file -->
-    <script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/musicPage.js"></script>
 
     <!-- Bootstrap JavaScript CDN -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
