--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- Begin Container -->
     <div class="container">
 
-        <div class="col-12 col-md-9">
+        <div class="col-md-12">
 
             <!-- Begin Jumbotron 5000 -->
             <div class="jumbotron">
